--- a/case-item.html
+++ b/case-item.html
@@ -9,7 +9,7 @@
 		<link rel="icon" href="favicons/favicon.ico">
 		<link rel="icon" href="favicons/favicon-16x16.png" sizes="16x16">
 		<link rel="icon" href="favicons/favicon-32x32.png" sizes="32x32">
-		<link rel="stylesheet" href="./css/main.css?v=1686834345026">
+		<link rel="stylesheet" href="./css/main.css?v=1686835317652">
 	</head>
 	<body>
 		<!-- Header-->
@@ -220,7 +220,7 @@
 				<!-- Panel-->
 				<div class="section-case-item__panel">
 					<h3 class="section-case-item__panel-title">Решение</h3>
-					<p class="section-case-item__text">Наша компания реализовала для клиента интеграцию со следующими компаниями:</p>
+					<p class="section-case-item__text"><strong>Наша компания реализовала для клиента интеграцию со следующими компаниями:</strong></p>
 					<ul class="section-case-item__list">
 						<li>Мэйджор Экспресс</li>
 						<li>Курьер Сервис Экспресс</li>
@@ -228,7 +228,7 @@
 						<li>DPD (возможность реализации выдачи груза через ПВЗ)</li>
 						<li>Pony Express</li>
 					</ul>
-					<p class="section-case-item__text">Реализовав интеграцию с транспортными компаниями, наши клиенты получают следующие плюсы:</p>
+					<p class="section-case-item__text"><strong>Реализовав интеграцию с транспортными компаниями, наши клиенты получают следующие плюсы:</strong></p>
 					<ul class="section-case-item__list">
 						<li>экономия времени своих сотрудников на формирование накладных и передачи документов – по окончанию комплектации заказа, автоматически, заказу присваивается уникальный номер перевозчика (накладная). Номер накладной печатается на отгрузочном стикере. Передача груза в ТК происходит путем считывания ШК накладной с отгрузочного стикера. Никакие доп. документы перевозчика на груз наносить не требуется</li>
 						<li>экономия времени своих сотрудников на формирование заказов в системе перевозчика для вывоза собранных грузов – по интеграции передается информация по требуемой дате вывоза груза. К указанной дате ТК подает машину нужного объема и забирает подготовленные к отгрузке заказы.</li>
@@ -405,8 +405,8 @@
 				</div>
 			</div>
 		</footer>
-		<script src="./js/vendor.js?v=1686834345027"></script>
-		<script src="./js/main.js?v=1686834345027"></script><svg width="0" height="0" class="hidden">
+		<script src="./js/vendor.js?v=1686835317653"></script>
+		<script src="./js/main.js?v=1686835317653"></script><svg width="0" height="0" class="hidden">
 	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 8" id="chevron-dropdown">
 		<path d="M1 1.28394L6 5.96615L11 1.28394" stroke="#00162F" stroke-width="2" stroke-linecap="round"></path>
 	</symbol>
