--- a/terminals.html
+++ b/terminals.html
@@ -9,7 +9,7 @@
 		<link rel="icon" href="favicons/favicon.ico">
 		<link rel="icon" href="favicons/favicon-16x16.png" sizes="16x16">
 		<link rel="icon" href="favicons/favicon-32x32.png" sizes="32x32">
-		<link rel="stylesheet" href="./css/main.css?v=1687355591725">
+		<link rel="stylesheet" href="./css/main.css?v=1687384992284">
 	</head>
 	<body>
 		<!-- Header-->
@@ -51,8 +51,8 @@
 								</svg>
 							</div>
 							<ul class="dropdown__options-list">
-								<li class="dropdown__option dropdown__option--selected" data-value="Русский"><img class="dropdown__flag" src="images/common/flag-ru.svg" alt>Русский</li>
-								<li class="dropdown__option" data-value="English"><img class="dropdown__flag" src="images/common/flag-en.svg" alt>English</li>
+								<li class="dropdown__option dropdown__option--selected" data-value="Русский"><img class="dropdown__flag" src="images/common/flag-ru.svg" alt><span class="dropdown__lang-text">Русский</span></li>
+								<li class="dropdown__option" data-value="English"><img class="dropdown__flag" src="images/common/flag-en.svg" alt><span class="dropdown__lang-text">English</span></li>
 							</ul>
 						</div>
 					</div>
@@ -361,8 +361,28 @@
 		<footer class="footer">
 			<div class="container">
 				<div class="footer__row">
+					<div class="footer__mobile-nav hide-laptop">
+						<div class="footer__mobile-nav-block"><a class="footer__nav-title" href="#">Индустрии</a></div>
+						<div class="footer__mobile-nav-block"><a class="footer__nav-title" href="#">Услуги</a></div>
+						<div class="footer__mobile-nav-block"><a class="footer__nav-title" href="#">Кейсы</a></div>
+						<div class="footer__mobile-nav-block"><a class="footer__nav-title" href="#">Терминалы</a></div>
+						<div class="footer__mobile-nav-block"><a class="footer__nav-title" href="#">Карьера</a></div>
+						<div class="footer__mobile-nav-block"><a class="footer__nav-title" href="#">Вебинары</a></div>
+						<div class="footer__mobile-nav-block"><a class="footer__nav-title" href="#">Новости</a></div>
+						<div class="footer__mobile-nav-block"><span class="footer__nav-title">Устойчивое развитие
+								<svg class="footer__mobile-menu-dropdown">
+									<use xlink:href="images/svg-sprite/svg-sprite-static.svg#menu-dropdown"></use>
+								</svg></span>
+							<ul class="footer__nav-list">
+								<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Охрана труда</a></li>
+								<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Служба качества</a></li>
+							</ul>
+						</div>
+						<div class="footer__mobile-nav-block"><a class="footer__nav-title" href="#">О нас</a></div>
+						<div class="footer__mobile-nav-block"><a class="footer__nav-title" href="#">Контакты</a></div>
+					</div>
 					<!-- Nav col-->
-					<div class="footer__col"><a class="footer__nav-title" href="#">Индустрии</a>
+					<div class="footer__col show-laptop"><a class="footer__nav-title" href="#">Индустрии</a>
 						<ul class="footer__nav-list">
 							<li class="footer__nav-elem"><a class="footer__nav-link footer__nav-link--active" href="#">Fashion</a></li>
 							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Telecom</a></li>
@@ -377,7 +397,7 @@
 						</ul>
 					</div>
 					<!-- Nav col-->
-					<div class="footer__col"><a class="footer__nav-title" href="#">Услуги</a>
+					<div class="footer__col show-laptop"><a class="footer__nav-title" href="#">Услуги</a>
 						<ul class="footer__nav-list">
 							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Ответственное хранение</a></li>
 							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Складская обработка</a></li>
@@ -389,7 +409,7 @@
 						</ul>
 					</div>
 					<!-- Nav col-->
-					<div class="footer__col"><a class="footer__nav-title" href="#">Major Terminal</a>
+					<div class="footer__col show-laptop"><a class="footer__nav-title" href="#">Major Terminal</a>
 						<ul class="footer__nav-list footer__nav-list--show-laptop">
 							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">О нас</a></li>
 							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Кейсы</a></li>
@@ -421,8 +441,8 @@
 				</div>
 			</div>
 		</footer>
-		<script src="./js/vendor.js?v=1687355591727"></script>
-		<script src="./js/main.js?v=1687355591727"></script><svg width="0" height="0" class="hidden">
+		<script src="./js/vendor.js?v=1687384992285"></script>
+		<script src="./js/main.js?v=1687384992285"></script><svg width="0" height="0" class="hidden">
 	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 8" id="chevron-dropdown">
 		<path d="M1 1.28394L6 5.96615L11 1.28394" stroke="#00162F" stroke-width="2" stroke-linecap="round"></path>
 	</symbol>
